test/mulberry/Language/array_element_type_error.mulberry
# RUN: not mulberry-driver -typecheck %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  var units: Array<(), 2> = [(), ()];
  return 0;
}

# CHECK: error: type mismatch
